mastodon/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mastodon
spec:
  parentRefs:
    - kind: Gateway
      name: kubernetes-gateway
      namespace: istio-system
  hostnames:
    - $(DOMAIN)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/streaming
      backendRefs:
        - name: mastodon-streaming
          port: 4000
    - backendRefs:
        - name: mastodon-web
          port: 3000
